--- a/web/css/daw.css
+++ b/web/css/daw.css
@@ -2,7 +2,7 @@
 Document   : daw
 Description: Style rules for the ecommerce application
 */
-
+/*Cambio paleta de colores*/
 
 /* html tags */
 body {
@@ -42,8 +42,8 @@ table {
 
 .bubble {
     font-weight: bold;
-    background-color: #f5eabe;
-    padding: 5px;
+    background-color: #FF9800;
+    padding: 4px;
     color: inherit;
 }
 
@@ -61,7 +61,7 @@ table {
    shopping cart widget, language toggle, and logo */
 #header {
     height: 250px;
-    background: #aaa;
+    background: #263248;
 }
 
 #logo {
@@ -85,16 +85,16 @@ table {
     height: 50px;
     width: 850px;
     float: right;
-    background: #ccc;
+    background: #000000;
 }
 
 .headerWidget {
     width: 194px;
-    margin: 20px 2px;
+    margin: 12px 2px;
     font-size: small;
     float: right;
     line-height: 25px;
-    background: #aaa;
+    background: #FF9800;
 }
 
 
@@ -103,8 +103,9 @@ table {
     height: 60px;
     width: 350px;
     clear: left;
-    background: #aaa;
+    background: #7E8AA2;
 }
+
 
 
 /* index page styles */
@@ -112,7 +113,7 @@ table {
     height: 400px;
     width: 350px;
     float: left;
-    background: #ccc;
+    background: #7E8AA2;
 }
 
 #indexRightColumn {
@@ -127,7 +128,7 @@ table {
     width: 212px;
     margin: 21px 14px 6px;
     float: inherit;
-    background: #ccc;
+    background: #7E8AA2;
 }
 
 .categoryLabelText {
